resources/style.css
/*UNIVERSAL RULES*/

/*HEADER*/
header {
  display: flex;
  align-items: center;
  position: fixed;
  z-index: 1;
  width: 100%;
  height: 75px;
  border-bottom: 1px solid black;
  font-family: Verdana;
  font-size: 14px;
  font-weight: bold;
}

.logo {
  display: flex;
  align-items: center;
  padding-left: 30px;
  flex-grow: 1;
}

.logo span {
  color: MediumAquamarine;
  margin: 15px;
}

nav {
  display: inline-block;
}

nav span a {
  margin-right: 40px;
  color: black !important;
}

/*MAIN*/
div {
  border: 1px solid black;
}

.content {
  display: flex;
  position: relative;
  top: 80px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 0px;
  margin-bottom: 78px;
}

.column {
  display: flex;
  flex-direction: column;
}

.column.large {
  width: 630px;
}

.column.medium {
  width: 300px;
}

.column.small{
  width: 240px;
}

